Updated for Baril2022 full pub

--- a/people/j_laconte/index.html
+++ b/people/j_laconte/index.html
@@ -262,11 +262,17 @@ His research interests include risk assessment, traversability, applied mathemat
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>, <i>2</i>(1), 1628–1660. https://doi.org/10.55417/fr.2022050</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
 
 <br />
 
+<a href="/pdf/Baril2022.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
+
+
+<a href="https://fieldrobotics.net/Field_Robotics/Volume_2_files/Vol2_50.pdf" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
 
 <a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="laconte2021novel">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments. <i>Sensors</i>, <i>21</i>(22), 7562.</span> <strong></strong>
@@ -321,6 +327,13 @@ His research interests include risk assessment, traversability, applied mathemat
 
 
 <a class="details" href="/bibliography/kasmi2020information/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Laconte2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Laconte2019">Laconte, J., Deschênes, S.-P., Labussière, M., &amp; Pomerleau, F. (2019). Lidar Measurement Bias Estimation via Return Waveform Modelling in a Context of 3D Mapping. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span> <strong></strong>
 
 <br />
@@ -330,14 +343,7 @@ His research interests include risk assessment, traversability, applied mathemat
 
 
 
-<a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span> <strong></strong>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Laconte2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
 <ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span> <strong></strong>
 
