--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -233,11 +233,17 @@
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>, <i>2</i>(1), 1628–1660. https://doi.org/10.55417/fr.2022050</span> <strong>Accepted June 7 2022, ID FR-21-0050.R2, arXiv preprint arXiv:2111.13981</strong>
 
 <br />
 
+<a href="/pdf/Baril2022.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
+
+
+<a href="https://fieldrobotics.net/Field_Robotics/Volume_2_files/Vol2_50.pdf" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
 
 <a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Roucek2021">Rouček, T., Pecka, M., Čížek, P., Petříček, T., Bayer, J., Šalanský, V., Azayev, T., Heřt, D., Petrlík, M., Báča, T., Spurný, V., Krátký, V., Petráček, P., Baril, D., Vaidis, M., Kubelka, V., Pomerleau, F., Faigl, J., Zimmermann, K., … Krajník, T. (2021). System for multi-robotic exploration of underground environments CTU-CRAS-NORLAB in the DARPA Subterranean Challenge. <i>Field Robotics</i>. https://doi.org/10.48550/ARXIV.2110.05911</span> <strong>Accepted June 28 2021, ID FR-21-0003.R1, arXiv preprint arXiv:2110:05911</strong>
@@ -338,19 +344,6 @@
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
-
-<br />
-
-<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
-&emsp;
-
-
-<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
-&emsp;
-
-
-<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Roucek2019">Roucek, T., Pecka, M., Cizek, P., Petricek, T., Bayer, J., Salansky, V., Hert, D., Petrlik, M., Baca, T., Spurny, V., Pomerleau, F., Kubelka, V., Faigl, J., Zimmermann, K., Saska, M., Svoboda, T., &amp; Krajnik, T. (2019). DARPA Subterranean Challenge: Multi-robotic exploration of underground environments. <i>Proceeding of the Modelling and Simulation for Autonomous System Workshop (MESAS)</i>.</span> <strong></strong>
 
 <br />
@@ -368,13 +361,19 @@
 
 
 <a class="details" href="/bibliography/Dandurand2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span> <strong></strong>
+<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
 
+<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
 
-<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+&emsp;
+
+
+<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span> <strong></strong>
 
 <br />
@@ -382,6 +381,13 @@
 
 
 <a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span> <strong></strong>
 
 <br />
