Added research about RTS and modify Maxime Vaidis page

--- a/bibliography/Vaidis2020/index.html
+++ b/bibliography/Vaidis2020/index.html
@@ -184,6 +184,7 @@
   <span class="c">journal = {IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control},</span>
   <span class="c">year = {2020},</span>
   <span class="c">author = {Vaidis, M. and Laconte, J. and Kubelka, V. and Pomerleau, F.},</span>
+  <span class="c">doi = {10.1109/CRV52889.2021.00012}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
