--- a/equipe/index.html
+++ b/equipe/index.html
@@ -962,7 +962,7 @@
 			<br />
 		
 		
-			<b>Expertise:</b> Interactions homme-machine, cartographie souterraine, ICP, Iterative Closest Point, recalage
+			<b>Expertise:</b> Stations totales robotisées, GNSS, cartographie souterraine, Iterative Closest Point, recalage
 		
 		</div>
 	
