--- a/people/index.html
+++ b/people/index.html
@@ -946,7 +946,7 @@
       <h3 class="author-name" itemprop="author">
         Maxime Vaidis
       </h3>
-			PhD student in Norlab laboratory
+			PhD candidate in Norlab laboratory
 
     </div><!-- ./author-content -->
     </div>
@@ -962,7 +962,7 @@
 			<br />
 		
 		
-			<b>Expertise:</b> Human-robot interactions, underground mapping, ICP, Iterative Closest Point, registration
+			<b>Expertise:</b> Robotic total stations, GNSS, underground mapping, Iterative Closest Point, registration
 		
 		</div>
 	
