--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -298,7 +298,20 @@
 
 <a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2022">Kubelka, V., Vaidis, M., &amp; Pomerleau, F. (2022). Gravity-constrained point cloud registration. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.13799</span> <strong>Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2022">Vaidis, M., Dubois, W., Guénette, A., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2023). Extrinsic calibration for highly accurate trajectories reconstruction. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2210.01048</span> <strong>Submitted to ICRA 2023</strong>
+
+<br />
+
+<a href="/pdf/Vaidis2022.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2210.01048" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Vaidis2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Kubelka2022">Kubelka, V., Vaidis, M., &amp; Pomerleau, F. (2022). Gravity-constrained point cloud registration. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.13799</span> <strong>Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
 
 <br />
 
@@ -311,6 +324,9 @@
 <li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span> <strong></strong>
 
 <br />
+
+<a href="/pdf/Vaidis2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
 
 
@@ -410,7 +426,7 @@
 
 <a class="details" href="/bibliography/kubelka2012complementary/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>. https://doi.org/10.1109/CRV52889.2021.00012</span> <strong></strong>
 
 <br />
 
