--- a/publications/icp-lie/index.html
+++ b/publications/icp-lie/index.html
@@ -240,7 +240,7 @@ With the Lie penalty (right), these breaking points are avoided as this term pus
 
 <h1 id="reference">Reference</h1>
 
-<p><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span></p>
+<p><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>. https://doi.org/10.1109/CRV52889.2021.00012</span></p>
 
 <h1 id="links">Links</h1>
 
