--- a/publications_fr/index.html
+++ b/publications_fr/index.html
@@ -672,6 +672,20 @@ Special care is taken ...
 <!-- /.grid -->
 
 <h1 id="liste-exhaustive">Liste exhaustive</h1>
+<h2 class="bibliography">2023</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2022">Vaidis, M., Dubois, W., Guénette, A., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2023). Extrinsic calibration for highly accurate trajectories reconstruction. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2210.01048</span> <strong>Submitted to ICRA 2023</strong>
+
+<br />
+
+<a href="/pdf/Vaidis2022.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2210.01048" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Vaidis2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">2022</h2>
 <ol class="bibliography" reversed="reversed"><li><span id="Pomerleau2022">Pomerleau, F. (2022). Robotics in Snow and Ice. In M. H. Ang, O. Khatib, &amp; B. Siciliano (Eds.), <i>Encyclopedia of Robotics</i> (pp. 1–6). Springer Berlin Heidelberg.</span> <strong>Major revision</strong>
 
@@ -759,6 +773,9 @@ Special care is taken ...
 
 <br />
 
+<a href="/pdf/Vaidis2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
 
 
 <a href="https://arxiv.org/abs/2104.14396" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
@@ -786,7 +803,7 @@ Special care is taken ...
 
 <a class="details" href="/bibliography/Chahine2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">2020</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>. https://doi.org/10.1109/CRV52889.2021.00012</span> <strong></strong>
 
 <br />
 
