--- a/research/snow/index.html
+++ b/research/snow/index.html
@@ -225,6 +225,9 @@ the UGV in a snow-covered forest.</li>
 
 <br />
 
+<a href="/pdf/Vaidis2021.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
 
 
 <a href="https://arxiv.org/abs/2104.14396" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
