Corrected youtube video issue

--- a/research/RTS-project/index.html
+++ b/research/RTS-project/index.html
@@ -248,7 +248,7 @@
 
 <!-- blank line -->
 <figure class="video_container">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=28tJiPNltYQ&amp;ab_channel=norlab" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="560" height="315" allowfullscreen="" src="https://www.youtube.com/embed/28tJiPNltYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </figure>
 
 <p>We evaluate the proposed approach against existing extrinsic calibration methods for RTS using a dataset consisting of more than 30 km of indoor and outdoor trajectories. These datasets and the code are available online to the community at <a href="https://github.com/norlab-ulaval/RTS_Extrinsic_Calibration" title="Official code and datasets">Github Project RTS</a>. The paper is available <a href="https://arxiv.org/abs/2210.01048">Here</a>.</p>
@@ -277,14 +277,14 @@
 
 <!-- blank line -->
 <figure class="video_container">
-<iframe width="560" height="315" src="https://youtube.com/shorts/5X38WGt7sl4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe allowfullscreen="" src="https://youtube.com/embed/lY9VE-Fr-wk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </figure>
 
 <p>To fix this issue, we added more fixations to reduce the vibrations:</p>
 
 <!-- blank line -->
 <figure class="video_container">
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=gRcUVSaivtE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="560" height="315" allowfullscreen="" src="https://www.youtube.com/embed/gRcUVSaivtE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </figure>
 
 <h3 id="sensor-extrinsic-calibration">Sensor extrinsic calibration</h3>
