--- a/research/snow/index.html
+++ b/research/snow/index.html
@@ -204,11 +204,17 @@ the UGV in a snow-covered forest.</li>
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Pomerleau2022">Pomerleau, F. (2022). Robotics in Snow and Ice. In M. H. Ang, O. Khatib, &amp; B. Siciliano (Eds.), <i>Encyclopedia of Robotics</i> (pp. 1–6). Springer Berlin Heidelberg.</span> <strong>Major revision</strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Pomerleau2022">Pomerleau, F. (2022). Robotics in Snow and Ice. In M. H. Ang, O. Khatib, &amp; B. Siciliano (Eds.), <i>Encyclopedia of Robotics</i> (pp. 1–9). Springer Berlin Heidelberg. https://doi.org/10.1007/978-3-642-41610-1_223-1</span> <strong></strong>
 
 <br />
 
+<a href="/pdf/Pomerleau2022.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
+
+
+<a href="https://doi.org/10.1007/978-3-642-41610-1_223-1" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
 
 <a class="details" href="/bibliography/Pomerleau2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Kubelka2022">Kubelka, V., Vaidis, M., &amp; Pomerleau, F. (2022). Gravity-constrained point cloud registration. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>. https://doi.org/10.48550/ARXIV.2203.13799</span> <strong>Accepted for oral presentation, arXiv preprint arXiv:2203.01902</strong>
