add page for Edith

--- a/equipe/index.html
+++ b/equipe/index.html
@@ -502,6 +502,10 @@
 
 <div class="tile">
 	
+		
+			<a href="https://norlab.ulaval.ca/people/e_brotherton_fr" title="Edith Brotherton">
+		
+	
 
 		<div class="grid">
     <div class="author-image">
@@ -532,6 +536,8 @@
 		
 		</div>
 	
+	
+  </a>
 	
 </div><!-- /.tile -->
 
