Added page for Saturation-Aware Angular Velocity Estimation: Extending the Robustness of SLAM to Aggressive Motions.

--- a/people/sp_deschenes/index.html
+++ b/people/sp_deschenes/index.html
@@ -273,7 +273,20 @@ Here is a demonstration of the system that has been implemented in the scope of 
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2024">Deschênes, S.-P., Baril, D., Boxan, M., Laconte, J., Giguère, P., &amp; Pomerleau, F. (2024). Saturation-Aware Angular Velocity Estimation: Extending the Robustness of SLAM to Aggressive Motions. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2310.07844</span> <strong>Submitted</strong>
+
+<br />
+
+<a href="/pdf/Deschenes2024.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2310.07844" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Deschenes2024/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
 
 <br />
 
