--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -233,7 +233,17 @@
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>, <i>2</i>(1), 1628–1660. https://doi.org/10.55417/fr.2022050</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Roucek2022">Rouček, T., Pecka, M., Čížek, P., Petříček, T., Bayer, J., Šalanský, V., Azayev, T., Heřt, D., Petrlík, M., Báča, T., Spurný, V., Krátký, V., Petráček, P., Baril, D., Vaidis, M., Kubelka, V., Pomerleau, F., Faigl, J., Zimmermann, K., … Krajník, T. (2022). System for multi-robotic exploration of underground environments CTU-CRAS-NORLAB in the DARPA Subterranean Challenge. <i>Field Robotics</i>, <i>2</i>(1), 1779–1818. https://doi.org/10.55417/fr.2022055</span> <strong></strong>
+
+<br />
+
+
+
+<a href="https://arxiv.org/abs/2110.05911" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Roucek2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Baril2022">Baril, D., Deschênes, S.-P., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2022). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>, <i>2</i>(1), 1628–1660. https://doi.org/10.55417/fr.2022050</span> <strong></strong>
 
 <br />
 
@@ -246,16 +256,6 @@
 &emsp;
 
 <a class="details" href="/bibliography/Baril2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Roucek2022">Rouček, T., Pecka, M., Čížek, P., Petříček, T., Bayer, J., Šalanský, V., Azayev, T., Heřt, D., Petrlík, M., Báča, T., Spurný, V., Krátký, V., Petráček, P., Baril, D., Vaidis, M., Kubelka, V., Pomerleau, F., Faigl, J., Zimmermann, K., … Krajník, T. (2022). System for multi-robotic exploration of underground environments CTU-CRAS-NORLAB in the DARPA Subterranean Challenge. <i>Field Robotics</i>, <i>2</i>(1), 1779–1818. https://doi.org/10.55417/fr.2022055</span> <strong></strong>
-
-<br />
-
-
-
-<a href="https://arxiv.org/abs/2110.05911" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
-&emsp;
-
-<a class="details" href="/bibliography/Roucek2022/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
@@ -384,13 +384,6 @@
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span> <strong></strong>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span> <strong></strong>
 
 <br />
@@ -398,6 +391,13 @@
 
 
 <a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span> <strong></strong>
 
 <br />
