--- a/research/libpointmatcher/index.html
+++ b/research/libpointmatcher/index.html
@@ -223,14 +223,7 @@ See it on GitHub
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2021). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>, <i>3</i>(5).</span> <strong></strong>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Chahine2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span> <strong></strong>
 
 <br />
 
@@ -243,6 +236,13 @@ See it on GitHub
 &emsp;
 
 <a class="details" href="/bibliography/Deschenes2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2021). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>, <i>3</i>(5).</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Chahine2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span> <strong></strong>
 
 <br />
@@ -273,32 +273,6 @@ See it on GitHub
 &emsp;
 
 <a class="details" href="/bibliography/Labussiere2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span> <strong></strong>
-
-<br />
-
-<a href="/pdf/Babin2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
-&emsp;
-
-
-
-<a href="https://doi.org/10.1109/ICRA.2019.8793791" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
-&emsp;
-
-<a class="details" href="/bibliography/Babin2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
-
-<br />
-
-<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
-&emsp;
-
-
-<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
-&emsp;
-
-
-<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Dandurand2019">Dandurand, P., Babin, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Predicting GNSS satellite visibility from dense point clouds. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
 
 <br />
@@ -339,13 +313,32 @@ See it on GitHub
 
 
 <a class="details" href="/bibliography/Landry2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Landry2018">Landry, D., Pomerleau, F., &amp; Giguère, P. (2018). <i>Data-driven covariance estimation of the iterative closest point algorithm</i>. Rendez-vous en intelligence artificielle de Québec.</span> <strong></strong>
+<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span> <strong></strong>
 
 <br />
 
+<a href="/pdf/Babin2019.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
 
 
-<a class="details" href="/bibliography/Landry2018/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+
+<a href="https://doi.org/10.1109/ICRA.2019.8793791" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Babin2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Babin2019a">Babin, P., Dandurand, P., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2019). Large-scale 3D Mapping of Subarctic Forests. <i>Proceedings of the Conference on Field and Service Robotics (FSR). Springer Tracts in Advanced Robotics</i>.</span> <strong></strong>
+
+<br />
+
+<a href="/pdf/Babin2019a.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+<a href="/pdf/Babin2019a.slides.pdf" target="_blank"><i class="fas fa-file-powerpoint">&nbsp;Slides</i></a>
+&emsp;
+
+
+<a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Labussiere2019">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2018). <i>Geometry Preserving Sampling Method based on Spectral Decomposition for 3D Registration</i>. arXiv preprint arXiv:1810.01666.</span> <strong></strong>
 
 <br />
@@ -353,6 +346,13 @@ See it on GitHub
 
 
 <a class="details" href="/bibliography/Labussiere2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Landry2018">Landry, D., Pomerleau, F., &amp; Giguère, P. (2018). <i>Data-driven covariance estimation of the iterative closest point algorithm</i>. Rendez-vous en intelligence artificielle de Québec.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Landry2018/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Babin2018">Babin, P., Pomerleau, F., &amp; Giguère, P. (2018). <i>Improving the robustness of registration algorithm in complex environments</i>. Colloque du regroupement FRQNT-REPARTI.</span> <strong></strong>
 
 <br />
@@ -367,13 +367,6 @@ See it on GitHub
 
 
 <a class="details" href="/bibliography/McGarey2016a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Krusi2015">Krüsi, P., Bücheler, B., Pomerleau, F., Schwesinger, U., Siegwart, R., &amp; Furgale, P. (2015). Lighting-invariant adaptive route following using iterative closest point matching. <i>Journal of Field Robotics</i>, <i>32</i>(4), 534–564.</span> <strong></strong>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Krusi2015/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Pomerleau2015">Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). A Review of Point Cloud Registration Algorithms for Mobile Robotics. <i>Foundations and Trends in Robotics</i>, <i>4</i>(1), 1–104.</span> <strong></strong>
 
 <br />
@@ -381,6 +374,13 @@ See it on GitHub
 
 
 <a class="details" href="/bibliography/Pomerleau2015/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Krusi2015">Krüsi, P., Bücheler, B., Pomerleau, F., Schwesinger, U., Siegwart, R., &amp; Furgale, P. (2015). Lighting-invariant adaptive route following using iterative closest point matching. <i>Journal of Field Robotics</i>, <i>32</i>(4), 534–564.</span> <strong></strong>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Krusi2015/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Hitz2015a">Hitz, G., Pomerleau, F., Colas, F., &amp; Siegwart, R. (2015). Relaxing the planar assumption: 3D state estimation for an autonomous surface vessel. <i>International Journal of Robotics Research</i>, <i>34</i>(13), 1604–1621.</span> <strong></strong>
 
 <br />
