--- a/research/snow/index.html
+++ b/research/snow/index.html
@@ -204,7 +204,20 @@ the UGV in a snow-covered forest.</li>
 
 <h1 id="publications">Publications</h1>
 
-<ol class="bibliography" reversed="reversed"><li><span id="Courcelle2023">Courcelle, C., Baril, D., Pomerleau, F., &amp; Laconte, J. (2023). On the Importance of Quantifying Visibility for Autonomous Vehicles under Extreme Precipitation. In H. Abut, G. Schmidt, K. Takeda, J. Lambert, &amp; J. H. L. Hansen (Eds.), <i>Towards Human-Vehicle Harmonization</i> (Vol. 3, pp. 239–250). De Gruyter. https://doi.org/doi:10.1515/9783110981223-018</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2024">Deschênes, S.-P., Baril, D., Boxan, M., Laconte, J., Giguère, P., &amp; Pomerleau, F. (2024). Saturation-Aware Angular Velocity Estimation: Extending the Robustness of SLAM to Aggressive Motions. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2310.07844</span> <strong>Submitted</strong>
+
+<br />
+
+<a href="/pdf/Deschenes2024.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2310.07844" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Deschenes2024/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Courcelle2023">Courcelle, C., Baril, D., Pomerleau, F., &amp; Laconte, J. (2023). On the Importance of Quantifying Visibility for Autonomous Vehicles under Extreme Precipitation. In H. Abut, G. Schmidt, K. Takeda, J. Lambert, &amp; J. H. L. Hansen (Eds.), <i>Towards Human-Vehicle Harmonization</i> (Vol. 3, pp. 239–250). De Gruyter. https://doi.org/doi:10.1515/9783110981223-018</span> <strong></strong>
 
 <br />
 
