--- a/people/j_laconte/index.html
+++ b/people/j_laconte/index.html
@@ -300,7 +300,20 @@ His research interests include risk assessment, traversability, applied mathemat
 
 <a class="details" href="/bibliography/Labussiere2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2023">Vaidis, M., Dubois, W., Guénette, A., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2023). Extrinsic calibration for highly accurate trajectories reconstruction. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2210.01048</span> <strong></strong>
+<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2024">Deschênes, S.-P., Baril, D., Boxan, M., Laconte, J., Giguère, P., &amp; Pomerleau, F. (2024). Saturation-Aware Angular Velocity Estimation: Extending the Robustness of SLAM to Aggressive Motions. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2310.07844</span> <strong>Submitted</strong>
+
+<br />
+
+<a href="/pdf/Deschenes2024.pdf" target="_blank"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://arxiv.org/abs/2310.07844" target="_blank"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Deschenes2024/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Vaidis2023">Vaidis, M., Dubois, W., Guénette, A., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2023). Extrinsic calibration for highly accurate trajectories reconstruction. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://arxiv.org/abs/2210.01048</span> <strong></strong>
 
 <br />
 
