Add Matej's personal page

--- a/people/index.html
+++ b/people/index.html
@@ -1318,6 +1318,10 @@
 
 <div class="tile">
 	
+		
+			<a href="https://norlab.ulaval.ca/people/m_boxan" title="Matěj Boxan">
+		
+	
 
 		<div class="grid">
     <div class="author-image">
@@ -1330,7 +1334,7 @@
       <h3 class="author-name" itemprop="author">
         Matěj Boxan
       </h3>
-			
+			PhD student in Norlab
 
     </div><!-- ./author-content -->
     </div>
@@ -1350,6 +1354,8 @@
 		
 		</div>
 	
+	
+  </a>
 	
 </div><!-- /.tile -->
 
