--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="TODO">
   <meta name="keywords" content="TODO">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Extreme Parkour</title>
+  <title>Sneeze</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -51,7 +51,7 @@
     </div>
     <div class="navbar-menu">
       <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-        <a class="navbar-item" href="https://extreme-parkour.github.io">
+        <a class="navbar-item" href="TODO this webpage">
         <span class="icon">
             <i class="fas fa-home"></i>
         </span>
@@ -74,22 +74,22 @@
     <div class="container">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Extreme Parkour with Legged Robots</h1>
+          <h1 class="title is-1 publication-title">Sneeze</h1>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
-              <a href="https://boxanm.github.io">Matěj Boxan<sup>*,1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="TODO">Alexander Krawciw<sup>*,1,2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://boxanm.github.io">Matěj Boxan<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="TODO">Alexander Krawciw<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">Effie Daum<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="TODO">Xinyuan Qiao<sup>1</sup></a>
-              <a href="TODO">Sven Lilge<sup>1</sup></a>
-              <a href="TODO">Timothy D. Barfoot<sup>1</sup></a>
+              <a href="TODO">Xinyuan Qiao\<sup>2</sup></a>
+              <a href="TODO">Sven Lilge<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="TODO">Timothy D. Barfoot<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">François Pomerleau<sup>1</sup></a>
               <br><br>
               <center>
                 <div class="image-row">
-                  <img src="./resources/norlab-logo.png" width="50%"></img><sup>1</sup>
+                  <img src="./resources/norlab_logo_acronym_dark.svg" width="10%"></img><sup>1</sup>
                   <img src="./resources/space.png" width="2%"></img>
-                  <img src="./resources/asrl-logo.svg" width="18%"></img><sup>2</sup>
+                  <img src="./resources/asrl-new-logo.png" width="90%"></img><sup>2</sup>
                 </div>
               </center>
               <span class="brmod">ICRA 2024 Workshop on Field Robotics</span>
