--- a/index.html
+++ b/index.html
@@ -80,16 +80,17 @@
               <a href="https://boxanm.github.io">Matěj Boxan<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">Alexander Krawciw<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">Effie Daum<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="TODO">Xinyuan Qiao\<sup>2</sup></a>
+              <a href="TODO">Xinyuan Qiao<sup>2</sup></a>
+              <br>
               <a href="TODO">Sven Lilge<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">Timothy D. Barfoot<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="TODO">François Pomerleau<sup>1</sup></a>
               <br><br>
               <center>
                 <div class="image-row">
-                  <img src="./resources/norlab_logo_acronym_dark.svg" width="10%"></img><sup>1</sup>
+                  <img src="./resources/norlab_logo_acronym_dark.png" width="30%"></img><sup>1</sup>
                   <img src="./resources/space.png" width="2%"></img>
-                  <img src="./resources/asrl-new-logo.png" width="90%"></img><sup>2</sup>
+                  <img src="./resources/asrl-new-logo.png" width="30%"></img><sup>2</sup>
                 </div>
               </center>
               <span class="brmod">ICRA 2024 Workshop on Field Robotics</span>
