Add Sam's linkedin

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     Krawciw<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 <a href="https://norlab.ulaval.ca/people/e_daum/">Effie
                                     Daum<sup>1</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                <a href="TODO">Xinyuan Qiao<sup>2</sup></a>
+                                <a href="https://www.linkedin.com/in/xinyuan-sam-qiao-8b15ba17a/">Xinyuan Qiao<sup>2</sup></a>
                                 <br>
                                 <a href="https://svenlilge.github.io">Sven
                                     Lilge<sup>2</sup></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
